progress templates: fix line wrapping

--- a/static/style.css
+++ b/static/style.css
@@ -453,10 +453,6 @@ a img.shadow:hover
 /*
  * Review progress
  */
-.progress-checklist {
-  list-style-type: none;
-}
-
 .progress-spinner {
   width: 1em;
   display: inline-block;
